--- a/index.html
+++ b/index.html
@@ -461,9 +461,9 @@
 		</footer>
 
 		<!-- MODAL -->
-		<div class="modal-backdrop" data-modal>
+		<div class="modal-backdrop is-hidden" data-modal>
 			<div class="modal-window">
-				<button class="modal-button" type="button" data-modal-close>
+				<button class="modal-close-button" type="button" data-modal-close>
 					<svg class="modal-close-icon">
 						<use href="./images/sprite.svg#icon-close"></use>
 					</svg>
@@ -478,6 +478,7 @@
 								id="name"
 								placeholder=" "
 								name="modal-form-name"
+								required
 							/>
 							<label class="modal-label" for="name">Name</label>
 							<svg class="modal-icon" width="18" height="18">
@@ -492,6 +493,7 @@
 								id="tel"
 								placeholder=" "
 								name="modal-form-tel"
+								required
 							/>
 							<label class="modal-label" for="tel">Telephone</label>
 							<svg class="modal-icon" width="18" height="18">
@@ -506,6 +508,7 @@
 								id="mail"
 								placeholder=" "
 								name="modal-form-email"
+								required
 							/>
 							<label class="modal-label" for="mail">E-mail</label>
 							<svg class="modal-icon" width="18" height="18">
@@ -523,6 +526,23 @@
 							<label class="modal-label" for="comments">Comments</label>
 						</li>
 					</ul>
+
+					<label class="modal-checkbox-label" for="conditions">
+						<input
+							class="modal-checkbox-initial visually-hidden"
+							type="checkbox"
+							name="conditions"
+							id="conditions"
+							required
+						/>
+						<svg class="modal-checkbox-current" width="16" height="15">
+							<use href="./images/sprite.svg#icon-check"></use>
+						</svg>
+						I agree with the letter and accept the
+						<button class="modal-btn-conditions" type="button">Terms and Conditions</button>
+					</label>
+
+					<button class="modal-send-button">Send</button>
 				</form>
 			</div>
 		</div>
