--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 						+1 212-772-4150</a
 					>
 				</div>
+				<button class="theme-btn">theme</button>
 			</div>
 		</header>
 
@@ -566,5 +567,6 @@
 		<script src="./js/modal.js"></script>
 		<script src="./js/info-form.js"></script>
 		<script src="./js/footer-form.js"></script>
+		<script src="./js/theme.js"></script>
 	</body>
 </html>
