--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link
 			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-		/>
-		<link
-			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,7 +14,7 @@
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="./css/styles.css" />
+		<link rel="stylesheet" href="./css/main.min.css" />
 		<title>Document</title>
 	</head>
 	<body>
@@ -55,6 +51,7 @@
 						+1 212-772-4150</a
 					>
 				</div>
+				<button class="theme-btn">theme</button>
 			</div>
 		</header>
 
@@ -570,5 +567,6 @@
 		<script src="./js/modal.js"></script>
 		<script src="./js/info-form.js"></script>
 		<script src="./js/footer-form.js"></script>
+		<script src="./js/theme.js"></script>
 	</body>
 </html>
