--- a/portfolio.html
+++ b/portfolio.html
@@ -4,17 +4,13 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="/css/styles.css" />
+		<link rel="stylesheet" href="./css/portfolio.css" />
 		<title>Document</title>
 	</head>
 	<body>
@@ -26,10 +22,10 @@
 				<nav class="nav">
 					<ul class="nav__list">
 						<li class="nav__item">
-							<a class="nav__link nav__link--current" href="/index.html">Studio</a>
+							<a class="nav__link" href="/index.html">Studio</a>
 						</li>
 						<li class="nav__item">
-							<a class="nav__link" href="/portfolio.html">Portfolio</a>
+							<a class="nav__link nav__link--current" href="/portfolio.html">Portfolio</a>
 						</li>
 						<li class="nav__item">
 							<a class="nav__link" href="#contacts">Contacts</a>
@@ -358,6 +354,7 @@
 							type="email"
 							name="subscribe-email"
 							placeholder="E-mail"
+							required
 						/>
 						<button class="subscribe-form__btn" type="submit">
 							Subscribe
