--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<a class="logo logo--top" href="/index.html">
 					<span class="logo--accent">Web</span>Studio</a
 				>
-				<nav class="nav">
+				<nav class="nav mobmenu-hidden">
 					<ul class="nav__list">
 						<li class="nav__item">
 							<a class="nav__link nav__link--current" href="/index.html">Studio</a>
@@ -37,7 +37,7 @@
 					</ul>
 				</nav>
 
-				<div class="header-address">
+				<div class="header-address mobmenu-hidden">
 					<a class="header-address__link" href="mailto:info@devstudio.com">
 						<svg class="header-address__icon" width="16" height="12">
 							<use href="./images/sprite.svg#icon-envelope"></use>
@@ -51,23 +51,35 @@
 						+1 212-772-4150</a
 					>
 				</div>
-				<button class="theme-btn">theme</button>
+				<button class="mobmenu__button" type="button">
+					<svg class="mobmenu__button-icon" width="40" height="40">
+						<use
+							class="mobmenu__button-icon--close"
+							href="./images/sprite.svg#icon-mobmenu-close"
+						></use>
+						<use
+							class="mobmenu__button-icon--open"
+							href="./images/sprite.svg#icon-mobmenu-open"
+						></use>
+					</svg>
+				</button>
+				<!-- <button class="theme-btn">theme</button> -->
 			</div>
 		</header>
 
 		<main>
 			<!-- HERO -->
-			<section class="hero">
+			<!-- <section class="hero">
 				<div class="container">
 					<h1 class="hero__title animate__animated animate__zoomInDown">
 						EFFECTIVE SOLUTIONS FOR YOUR BUSINESS
 					</h1>
 					<button class="hero__btn" type="button" data-modal-open>Request our service</button>
 				</div>
-			</section>
+			</section> -->
 
 			<!-- ADVANTAGES -->
-			<section class="advantages">
+			<!-- <section class="advantages">
 				<div class="container">
 					<h2 class="visually-hidden">Advantages</h2>
 					<ul class="advantages__list">
@@ -124,10 +136,10 @@
 						</li>
 					</ul>
 				</div>
-			</section>
+			</section> -->
 
 			<!-- SERVICES -->
-			<section class="services">
+			<!-- <section class="services">
 				<div class="container">
 					<h2 class="section-title">What we do</h2>
 					<ul class="services__list">
@@ -168,10 +180,10 @@
 						</li>
 					</ul>
 				</div>
-			</section>
+			</section> -->
 
 			<!-- TEAM -->
-			<section class="team">
+			<!-- <section class="team">
 				<div class="container">
 					<h2 class="section-title">Our Team</h2>
 					<ul class="team__list">
@@ -344,10 +356,10 @@
 						</li>
 					</ul>
 				</div>
-			</section>
+			</section> -->
 
 			<!-- CLIENTS -->
-			<section class="clients">
+			<!-- <section class="clients">
 				<div class="container">
 					<h2 class="section-title">Regular Customers</h2>
 					<ul class="clients__list">
@@ -400,10 +412,10 @@
 						</li>
 					</ul>
 				</div>
-			</section>
+			</section> -->
 		</main>
 
-		<footer class="footer" id="contacts">
+		<!-- <footer class="footer" id="contacts">
 			<div class="container">
 				<div class="footer-address">
 					<a class="logo logo--bottom" href="/index.html">
@@ -474,10 +486,10 @@
 					</form>
 				</div>
 			</div>
-		</footer>
+		</footer> -->
 
 		<!-- MODAL -->
-		<div class="backdrop is-hidden" data-modal>
+		<!-- <div class="backdrop is-hidden" data-modal>
 			<div class="modal">
 				<button class="modal__close-button" type="button" data-modal-close>
 					<svg class="modal__close-icon">
@@ -562,11 +574,12 @@
 					<button class="info-form__button">Send</button>
 				</form>
 			</div>
-		</div>
+		</div> -->
 
-		<script src="./js/modal.js"></script>
+		<!-- <script src="./js/index.js"></script> -->
+		<!-- <script src="./js/modal.js"></script>
 		<script src="./js/info-form.js"></script>
-		<script src="./js/footer-form.js"></script>
-		<script src="./js/theme.js"></script>
+		<script src="./js/footer-form.js"></script> -->
+		<!-- <script src="./js/theme.js"></script> -->
 	</body>
 </html>
