--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
 
 		<main>
 			<!-- HERO -->
-			<!-- <section class="hero">
+			<section class="hero">
 				<div class="container">
 					<h1 class="hero__title animate__animated animate__zoomInDown">
 						EFFECTIVE SOLUTIONS FOR YOUR BUSINESS
 					</h1>
 					<button class="hero__btn" type="button" data-modal-open>Request our service</button>
 				</div>
-			</section> -->
+			</section>
 
 			<!-- ADVANTAGES -->
-			<!-- <section class="advantages">
+			<section class="advantages">
 				<div class="container">
 					<h2 class="visually-hidden">Advantages</h2>
 					<ul class="advantages__list">
@@ -136,7 +136,7 @@
 						</li>
 					</ul>
 				</div>
-			</section> -->
+			</section>
 
 			<!-- SERVICES -->
 			<!-- <section class="services">
