mobile team-section

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 			</section>
 
 			<!-- SERVICES -->
-			<!-- <section class="services">
+			<section class="services">
 				<div class="container">
 					<h2 class="section-title">What we do</h2>
 					<ul class="services__list">
@@ -180,10 +180,10 @@
 						</li>
 					</ul>
 				</div>
-			</section> -->
+			</section>
 
 			<!-- TEAM -->
-			<!-- <section class="team">
+			<section class="team">
 				<div class="container">
 					<h2 class="section-title">Our Team</h2>
 					<ul class="team__list">
@@ -192,7 +192,6 @@
 								class="team__img"
 								src="/images/team/desktop/walker.jpg"
 								alt="Christopher Walker"
-								width="270"
 							/>
 							<h3 class="team__name">Christopher Walker</h3>
 							<p class="team__desc">Product Designer</p>
@@ -230,12 +229,7 @@
 						</li>
 
 						<li class="team__item">
-							<img
-								class="team__img"
-								src="/images/team/desktop/evans.jpg"
-								alt="Kylie Evans"
-								width="270"
-							/>
+							<img class="team__img" src="/images/team/desktop/evans.jpg" alt="Kylie Evans" />
 							<h3 class="team__name">Kylie Evans</h3>
 							<p class="team__desc">Frontend Developer</p>
 							<ul class="social social--team">
@@ -272,12 +266,7 @@
 						</li>
 
 						<li class="team__item">
-							<img
-								class="team__img"
-								src="/images/team/desktop/harris.jpg"
-								alt="Ryan Harris"
-								width="270"
-							/>
+							<img class="team__img" src="/images/team/desktop/harris.jpg" alt="Ryan Harris" />
 							<h3 class="team__name">Ryan Harris</h3>
 							<p class="team__desc">Marketing</p>
 							<ul class="social social--team">
@@ -314,12 +303,7 @@
 						</li>
 
 						<li class="team__item">
-							<img
-								class="team__img"
-								src="/images/team/desktop/moore.jpg"
-								alt="Tyler Moore"
-								width="270"
-							/>
+							<img class="team__img" src="/images/team/desktop/moore.jpg" alt="Tyler Moore" />
 							<h3 class="team__name">Tyler Moore</h3>
 							<p class="team__desc">UI Designer</p>
 							<ul class="social social--team">
@@ -356,7 +340,7 @@
 						</li>
 					</ul>
 				</div>
-			</section> -->
+			</section>
 
 			<!-- CLIENTS -->
 			<!-- <section class="clients">
