--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<a class="logo logo--top" href="/index.html">
 					<span class="logo--accent">Web</span>Studio</a
 				>
-				<nav class="nav">
+				<nav class="nav mobmenu-hidden">
 					<ul class="nav__list">
 						<li class="nav__item">
 							<a class="nav__link nav__link--current" href="/index.html">Studio</a>
@@ -37,7 +37,7 @@
 					</ul>
 				</nav>
 
-				<div class="header-address">
+				<div class="header-address mobmenu-hidden">
 					<a class="header-address__link" href="mailto:info@devstudio.com">
 						<svg class="header-address__icon" width="16" height="12">
 							<use href="./images/sprite.svg#icon-envelope"></use>
@@ -51,7 +51,19 @@
 						+1 212-772-4150</a
 					>
 				</div>
-				<button class="theme-btn">theme</button>
+				<button class="mobmenu__button" type="button">
+					<svg class="mobmenu__button-icon" width="40" height="40">
+						<use
+							class="mobmenu__button-icon--close"
+							href="./images/sprite.svg#icon-mobmenu-close"
+						></use>
+						<use
+							class="mobmenu__button-icon--open"
+							href="./images/sprite.svg#icon-mobmenu-open"
+						></use>
+					</svg>
+				</button>
+				<!-- <button class="theme-btn">theme</button> -->
 			</div>
 		</header>
 
@@ -180,7 +192,6 @@
 								class="team__img"
 								src="/images/team/desktop/walker.jpg"
 								alt="Christopher Walker"
-								width="270"
 							/>
 							<h3 class="team__name">Christopher Walker</h3>
 							<p class="team__desc">Product Designer</p>
@@ -218,12 +229,7 @@
 						</li>
 
 						<li class="team__item">
-							<img
-								class="team__img"
-								src="/images/team/desktop/evans.jpg"
-								alt="Kylie Evans"
-								width="270"
-							/>
+							<img class="team__img" src="/images/team/desktop/evans.jpg" alt="Kylie Evans" />
 							<h3 class="team__name">Kylie Evans</h3>
 							<p class="team__desc">Frontend Developer</p>
 							<ul class="social social--team">
@@ -260,12 +266,7 @@
 						</li>
 
 						<li class="team__item">
-							<img
-								class="team__img"
-								src="/images/team/desktop/harris.jpg"
-								alt="Ryan Harris"
-								width="270"
-							/>
+							<img class="team__img" src="/images/team/desktop/harris.jpg" alt="Ryan Harris" />
 							<h3 class="team__name">Ryan Harris</h3>
 							<p class="team__desc">Marketing</p>
 							<ul class="social social--team">
@@ -302,12 +303,7 @@
 						</li>
 
 						<li class="team__item">
-							<img
-								class="team__img"
-								src="/images/team/desktop/moore.jpg"
-								alt="Tyler Moore"
-								width="270"
-							/>
+							<img class="team__img" src="/images/team/desktop/moore.jpg" alt="Tyler Moore" />
 							<h3 class="team__name">Tyler Moore</h3>
 							<p class="team__desc">UI Designer</p>
 							<ul class="social social--team">
@@ -347,7 +343,7 @@
 			</section>
 
 			<!-- CLIENTS -->
-			<section class="clients">
+			<!-- <section class="clients">
 				<div class="container">
 					<h2 class="section-title">Regular Customers</h2>
 					<ul class="clients__list">
@@ -400,10 +396,10 @@
 						</li>
 					</ul>
 				</div>
-			</section>
+			</section> -->
 		</main>
 
-		<footer class="footer" id="contacts">
+		<!-- <footer class="footer" id="contacts">
 			<div class="container">
 				<div class="footer-address">
 					<a class="logo logo--bottom" href="/index.html">
@@ -474,10 +470,10 @@
 					</form>
 				</div>
 			</div>
-		</footer>
+		</footer> -->
 
 		<!-- MODAL -->
-		<div class="backdrop is-hidden" data-modal>
+		<!-- <div class="backdrop is-hidden" data-modal>
 			<div class="modal">
 				<button class="modal__close-button" type="button" data-modal-close>
 					<svg class="modal__close-icon">
@@ -562,11 +558,12 @@
 					<button class="info-form__button">Send</button>
 				</form>
 			</div>
-		</div>
+		</div> -->
 
-		<script src="./js/modal.js"></script>
+		<!-- <script src="./js/index.js"></script> -->
+		<!-- <script src="./js/modal.js"></script>
 		<script src="./js/info-form.js"></script>
-		<script src="./js/footer-form.js"></script>
-		<script src="./js/theme.js"></script>
+		<script src="./js/footer-form.js"></script> -->
+		<!-- <script src="./js/theme.js"></script> -->
 	</body>
 </html>
