--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 			</section>
 
 			<!-- CLIENTS -->
-			<!-- <section class="clients">
+			<section class="clients">
 				<div class="container">
 					<h2 class="section-title">Regular Customers</h2>
 					<ul class="clients__list">
@@ -396,7 +396,7 @@
 						</li>
 					</ul>
 				</div>
-			</section> -->
+			</section>
 		</main>
 
 		<!-- <footer class="footer" id="contacts">
