--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 			</section>
 		</main>
 
-		<!-- <footer class="footer" id="contacts">
+		<footer class="footer" id="contacts">
 			<div class="container">
 				<div class="footer-address">
 					<a class="logo logo--bottom" href="/index.html">
@@ -460,6 +460,7 @@
 							type="email"
 							name="subscribe-email"
 							placeholder="E-mail"
+							required
 						/>
 						<button class="subscribe-form__btn" type="submit">
 							Subscribe
@@ -470,7 +471,7 @@
 					</form>
 				</div>
 			</div>
-		</footer> -->
+		</footer>
 
 		<!-- MODAL -->
 		<!-- <div class="backdrop is-hidden" data-modal>
