portfolio buttons mob style

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
 			</div>
 		</header>
 
-		<!-- <main>
+		<main>
 			<section class="portfolio">
 				<div class="container">
 					<h1 class="visually-hidden">Portfolio</h1>
@@ -84,7 +84,7 @@
 						</li>
 					</ul>
 
-					<ul class="projects">
+					<!-- <ul class="projects">
 						<li class="projects__item">
 							<a class="projects__link" href="/">
 								<div class="projects__wrapper overflow-hidden">
@@ -300,10 +300,10 @@
 								</div>
 							</a>
 						</li>
-					</ul>
+					</ul> -->
 				</div>
 			</section>
-		</main> -->
+		</main>
 
 		<footer class="footer" id="contacts">
 			<div class="container">
